<resources>
    <string name="app_name">GoogleMap</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="europe">Europe</string>
    <string name="australia">Australia</string>
    <string name="north_american">North American</string>
    <string name="south_american">South American</string>
    <string name="asia">Asia</string>
    <string name="africa">Africa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>